# libppe

./: CMakeLists.txt  README.md
inc/ppe/: error.h  errors.h  log.h  macros.h  memhose.h  mempool.h  snippet.h  string.h  types.h
inc/ppe/mempool/: memhose.h
inc/ppe/string/: bunch.h  finder.h
src/: error.c  errors.c  log.c  memhose.c  mempool.c  snippet.c  string.c
src/mempool/: memhose.c
src/string/: bunch.c  finder.c
test/: CMakeLists.txt  log.c  string.c
